# Implementa-o-Trigonom-trica

./: .gitignore  CMakeLists.txt  README.md
include/: tests.h  trig.h
src/: main.c
src/tests/: tests.c
src/trig/: trig.c
